fix footer on mobile

--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -20,3 +20,13 @@
   padding: var(--space-default);
   text-align: right;
 }
+
+@media screen and (max-width: 767px) {
+  .section {
+    margin-bottom: var(--space-default);
+  }
+
+  .sectionsContainer {
+    padding: var(--space-more);
+  }
+}
